Requisito de Tarjeta y autenticación falta más implementaciones.